10-services/deployment/green-blue-initial.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends-blue-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: friends-app
      type: blue
  template:
    metadata:
      labels:
        app: friends-app
        type: blue
    spec:
      containers:
        - image: friends-service:0.1.0
          name: friends
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: friends-gb-service
spec:
  type: ClusterIP
  selector:
    app: friends-app
    type: blue
  ports:
    - port: 80
      targetPort: 8000
