10-services/deployment/services.yml
apiVersion: v1
kind: Pod
metadata:
  name: friends-single-pod-for-service
  labels:
    app: friends-app
spec:
  containers:
    - image: friends-service:0.3.0
      name: friends
      ports: [ { containerPort: 8000 } ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends-deployment-for-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: friends-app
  template:
    metadata:
      labels:
        app: friends-app
    spec:
      containers:
        - image: friends-service:0.3.0
          name: friends
          ports: [ { containerPort: 8000 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: friends-service
spec:
  type: ClusterIP # check service types
  selector:
    app: friends-app
  ports:
    - port: 80
      targetPort: 8000 # these are internal pod exposed ports
